<resources>
    <string name="app_name">Тестовое задание</string>
    <string name="bin_text">BIN</string>
    <string name="get_info">Получить информацию</string>
    <string name="country_name">Страна:  %1$s</string>
    <string name="cord_name">Координаты:  %1$s :  %2$s</string>
    <string name="type_card_name">Тип карты:  %1$s</string>
    <string name="country_name_view">Страна:</string>
    <string name="cord_name_view">Координаты:</string>
    <string name="type_card_name_view">Тип карты:</string>
    <string name="bank_text">Данные банка</string>
    <string name="card_text">Данные карты</string>
    <string name="url_name">URL:  %1$s</string>
    <string name="phone_number">Тел.:  %1$s</string>
    <string name="site_name">Сайт:  %1$s</string>
    <string name="town_name">Город:  %1$s</string>
    <string name="url_name_view">URL:</string>
    <string name="phone_number_view">Тел.:</string>
    <string name="site_name_view">Сайт:</string>
    <string name="town_name_view">Город:</string>
    <string name="app_data_base_name">bindetail</string>
    <string name="bin_name_view">BIN:</string>
    <string name="bin_name">BIN: %1$s</string>
    <string name="get_history">Получить историю поиска</string>
    <string name="back_btn_name">Вернуться на главную</string>
</resources>