<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_bin_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bin_name_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_country_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country_name_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bin_name"  />

    <TextView
        android:id="@+id/tv_cord_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cord_name_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_country_name" />

    <TextView
        android:id="@+id/tv_type_card_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_card_name_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_cord_name"  />

    <TextView
        android:id="@+id/tv_url_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/url_name_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_type_card_name" />

    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_url_name" />

    <TextView
        android:id="@+id/tv_site_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/site_name_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_number"  />

    <TextView
        android:id="@+id/tv_town_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/town_name_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_site_name"  />

</androidx.constraintlayout.widget.ConstraintLayout>